--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,18 @@
-# AI Image Detector Model VIT - 필요한 패키지들
-# 기본 머신러닝 및 딥러닝 패키지
-torch>=2.0.0
-torchvision>=0.15.0
-numpy>=1.21.0
-pandas>=1.3.0
-scikit-learn>=1.0.0
-matplotlib>=3.5.0
-
-# Hugging Face Transformers 및 관련 패키지
-transformers>=4.30.0
-datasets>=2.14.5
-accelerate>=0.27.0
-evaluate>=0.4.0
-
-# 이미지 처리 패키지
-Pillow>=9.0.0
-opencv-python>=4.5.0
-
-# 데이터 불균형 처리
-imbalanced-learn>=0.9.0
-
-# MLflow (모델 관리)
-mlflow>=2.0.0
-
-# Hugging Face Hub (모델 업로드용)
-huggingface-hub>=0.16.0
-
-# 기타 유틸리티
-tqdm>=4.64.0
-pathlib2>=2.3.0
-
-# Jupyter 노트북 (선택사항)
-jupyter>=1.0.0
-ipykernel>=6.0.0
-
-# 웹 애플리케이션 (Flask)
-Flask>=2.0.0
-Werkzeug>=2.0.0
-gunicorn>=20.0.0
+# Heroku 배포용 필수 패키지
+Flask==2.3.3
+Werkzeug==2.3.7
+gunicorn==21.2.0
+Pillow==10.0.1
+numpy==1.24.3
+torch==2.0.1
+torchvision==0.15.2
+transformers==4.33.2
+datasets==2.14.5
+accelerate==0.21.0
+evaluate==0.4.1
+scikit-learn==1.3.0
+pandas==2.0.3
+matplotlib==3.7.2
+imbalanced-learn==0.11.0
+huggingface-hub==0.16.4
+tqdm==4.66.1
